--- a/sesion13.html
+++ b/sesion13.html
@@ -11,6 +11,6 @@
     <h1>Primer ejercicio con JS</h1>
 </body>
 </html>
-<script src="js/ejercicio1.js"></script>
+<script src="js/sesion13.js"></script>
 
 
